--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,5 @@
+ * More concise output.
+
  * expDescription parameter was removed.
 
  * Faster computation of similar candidates (Jeremie Dubois-Lacoste
