* TODO: More things todo.
git-svn-id: file:///home/manu/work/irace/svn/trunk@710 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/TODO
+++ b/TODO
@@ -35,8 +35,13 @@ TODO R package:
    TR as the vignette.
 
  * Move the README information to the TR to avoid duplication.
+ 
+ * Add inst/COPYRIGHTS. See race package.
 
 TODO General:
+
+ * race package has some recent updates. Check with Mauro what he
+   changed.
 
  * Implement some kind of immediate rejection handling, that is, if
    hook.run returns +Inf, just discard the candidate immediately
