* NEWS: Add item.
git-svn-id: file:///home/manu/work/irace/svn/trunk@716 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,5 @@
+ * Nicer error handling in readParameters.
+
  * Add hypervolume (multi-objective) example.
 
  * Fix bug in computation of similar candidates.
