* NEWS: Mention bugfix.
git-svn-id: file:///home/manu/work/irace/svn/trunk@727 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/NEWS
+++ b/NEWS
@@ -2,7 +2,7 @@
 
  * Add hypervolume (multi-objective) example.
 
- * Fix bug in computation of similar candidates.
+ * Fix several bugs in the computation of similar candidates.
 
 1.02
 
