* TODO: Add new items.
git-svn-id: file:///home/manu/work/irace/svn/trunk@728 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/TODO
+++ b/TODO
@@ -190,6 +190,11 @@ TODO General:
    the parameters.txt file.  It should require very few
    modifications, only in the sampling (generation uniform and normal)
 
+ * Add a hook that after sampling post-processes the candidates.
+
+ * Make the update model convergence take into account the hierarchy
+   of parameters.
+
 ------------------------------------------------------------------------------
 
 DONE:
