* R/utils.R(mpiInit): Do not override Last, use reg.finalizer.
git-svn-id: file:///home/manu/work/irace/svn/trunk@740 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+ * Use reg.finalizer to finish Rmpi properly without clobbering
+   .Last().
+
+ * Remove uses of deprecated as.real().
+
  * Nicer error handling in readParameters.
 
  * Add hypervolume (multi-objective) example.
