* TODO: bug with unknown command-line params.
git-svn-id: file:///home/manu/work/irace/svn/trunk@753 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/TODO
+++ b/TODO
@@ -2,6 +2,12 @@
 
 BUGS
 
+#3
+
+$ irace --version (or any other unknown parameter)
+
+It should say "unknown parameter" or something like that.
+
 #2 
 
 A parameter like:
