* README: New FAQ.
git-svn-id: file:///home/manu/work/irace/svn/trunk@756 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/README
+++ b/README
@@ -203,6 +203,13 @@ Definitely. There are two main ways to achieve this:
    call your MATLAB code with appropriate parameters.
 
 
+###### My program may be buggy and run into an infinite loop. Is it
+       possible to set a maximum timeout?  ######
+
+We are not aware of any way to achieve this using R. However, in
+GNU/Linux, it is easy to implement by using the `timeout` command in
+`hook-run` when invoking your program.
+
 
 Contact
 --------
