--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,5 @@
+ * Use load-balancing (mc.preschedule = FALSE) in mclapply.
+
 1.03
 
  * Use reg.finalizer to finish Rmpi properly without clobbering
