* TODO: Mention /tmp issue with mpi.
git-svn-id: file:///home/manu/work/irace/svn/trunk@764 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/TODO
+++ b/TODO
@@ -49,6 +49,9 @@ TODO R package:
  * Add inst/COPYRIGHTS. See race package.
 
 TODO General:
+ 
+ * Make more use of /tmp in 'inst/examples/mpi/tune-main-cluster-mpi'
+   to avoid overloading the shared filesystem.
 
  * Pass to hook-run/hook-evaluate an instance index that uniquely
    identifies each instance. This has two main advantages: 1) we can
