* Update description of firstTest and eachTest.
git-svn-id: file:///home/manu/work/irace/svn/trunk@766 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/doc/old-documentation.tex
+++ b/doc/old-documentation.tex
@@ -1068,11 +1068,10 @@ F.R.S.-FNRS, of which they are Research Associates.
  or \texttt{t-test}.
 
 \defparameter{firstTest}{first-test}{5}
- Specifies after how many instances are seen before the first test is performed.
+ Specifies how many instances are seen before the first test is performed.
 
 \defparameter{eachTest}{each-test}{1}
- Specifies how many instances are seen before each test after the first one is 
- performed.
+ Specifies many instances are seen between tests.
 
  \defparameter{minNbSurvival}{min-survival}{0} The minimum number of
  candidates that should survive to continue one iteration.  Do not use
