* NEWS: Add new item.
git-svn-id: file:///home/manu/work/irace/svn/trunk@768 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,6 @@
+ * Replace obsolete package multicore by package parallel
+   (requires R >= 2.14.0)
+
  * Use load-balancing (mc.preschedule = FALSE) in mclapply.
 
 1.03
