* Move bugs to BUGS file. Add new one.
git-svn-id: file:///home/manu/work/irace/svn/trunk@777 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/TODO
+++ b/TODO
@@ -1,39 +1,6 @@
 ------------------------------------------------------------*- mode: text -*-
 
-BUGS
-
-#3
-
-$ irace --version (or any other unknown parameter)
-
-It should say "unknown parameter" or something like that.
-
-#2 
-
-A parameter like:
-
-a "" c (0, 5, 10, 20)
-
-and a constraint like a > 10 will return TRUE when a is 5, because a
-is actually "5" so the comparison is lexicographic. How to solve this?
-
- - Fix 1. Check if a can be converted to numeric, then force it before
-   evaluating constraints. However, we cannot know for sure if the user
-   actually wants to convert a to numeric or not. Imagine a = "+3", then
-   a == "+3" would fail!
-
- - Fix 2. Force users to use quotes when defining categorical and
-   ordinal parameters. Hopefully this will make obvious that these
-   values are strings and cannot be compared with other numbers.
- 
-#1 
-
-$ irace --debug-level
-Error in if (configuration$debugLevel >= 1) { : 
-  missing value where TRUE/FALSE needed
-Calls: irace.cmdline -> irace.main -> checkConfiguration
-Execution halted
-
+BUGS: see BUGS file
 
 TODO R package:
 
