NEWS: Mention improved path.rel2abs.
git-svn-id: file:///home/manu/work/irace/svn/trunk@829 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,6 @@
+ * Much more robust handling of relative/absolute paths. Improved support
+   for Windows. (Leslie Perez, Manuel López-Ibáñez)
+
  * Provide better error messages for incorrect parameter
    descriptions. Examples:
 
