* Mention recovery-file feature. Bump version and date.
git-svn-id: file:///home/manu/work/irace/svn/trunk@839 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,6 @@
+ * New option --recovery-file (recoveryFile) allows resuming a
+   previous irace run. (Leslie Perez)
+
  * The confidence level for the elimination test is now
    configurable with parameter --confidence. (Leslie Perez)
 
