--- a/TODO
+++ b/TODO
@@ -47,6 +47,13 @@ TODO General:
  * A new parameter "--hook-run-retries". Number of times to retry a
    hook-run call if the output is not ok. Default 0. Inf allowed.
 
+ * A new parameter "--hook-error-mode [exit | stop | retry ]" to
+   control what to do when a call to hook-run fails. Exit is
+   exit irace with an error; stop is call something like 
+   pskill(Sys.getpid(), signal=SIGSTOP) to put irace to sleep until
+   the user send a SIGCONT signal, then retry; and retry is retry
+   without sleeping before.
+
  * Make more use of /tmp in 'inst/examples/mpi/tune-main-cluster-mpi'
    to avoid overloading the shared filesystem.
 
