* NEWS: Mention Franco's hook-run.
git-svn-id: file:///home/manu/work/irace/svn/trunk@856 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/NEWS
+++ b/NEWS
@@ -17,6 +17,9 @@
  
  * Print elapsed time for calls to hook-run if debugLevel >=1.
 
+ * examples/hook-run-python/hook-run: A multi-purpose hook-run written
+   in Python. (Franco Mascia)
+
 1.04
 
  * Replace obsolete package multicore by package parallel
