--- a/README
+++ b/README
@@ -166,7 +166,7 @@ parallel. There are three ways to parallelize a single run of irace.
 
 3. SGE cluster: This mode requires Grid Engine commands qsub and
    qstat. The comand qsub should return a message that contains the
-   string: `Your job JOBID`. The command `qstat -j JOBID` returns
+   string: `Your job JOBID`. The command `qstat -j JOBID` should return
    nonzero if JOBID has finished, otherwise it should return zero.
 
    The option `--sge-cluster 1` will launch as many calls
@@ -175,9 +175,9 @@ parallel. There are three ways to parallelize a single run of irace.
    configuration for their cluster, otherwise `hookRun` will not submit
    jobs to the cluster. In this mode, irace must run in the submission
    node, and hence, qsub should not be used to invoke irace (either
-   directly or through tune-main).  
-   
-   See the examples in `$IRACE_HOME/examples/cluster-mode/`.
+   directly or through tune-main).  You also need to create a separate
+   hookEvaluate script to parse the results of the hookRun and return
+   them to irace. See the examples in `$IRACE_HOME/examples/sge-cluster/`.
 
 
 Frequently Asked Questions
