* TODO: Fix outdated dir.
git-svn-id: file:///home/manu/work/irace/svn/trunk@860 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/TODO
+++ b/TODO
@@ -137,7 +137,7 @@ TODO General:
    exit code is != 0, then complain. The option --cluster only chooses
    which type of qstat command is invoked. This will leave parsing the
    jobID to the user, since it is very fragile. We should put examples
-   for PBS and SGE in examples/cluster-mode/.
+   for PBS and SGE in examples/.
 
  * generateCandidatesNormal() takes too much time with >800 candidates
    and >20 parameters (SPEAR testcase).
