* Update NEWS and TODO.
git-svn-id: file:///home/manu/work/irace/svn/trunk@862 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/NEWS
+++ b/NEWS
@@ -20,6 +20,8 @@
  * examples/hook-run-python/hook-run: A multi-purpose hook-run written
    in Python. (Franco Mascia)
 
+ * Parallel mode in an SGE cluster (--sge-cluster) is more robust.
+
 1.04
 
  * Replace obsolete package multicore by package parallel
