* Bump date, revision.
git-svn-id: file:///home/manu/work/irace/svn/trunk@902 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/TODO
+++ b/TODO
@@ -17,6 +17,8 @@ TODO R package:
 
 TODO General:
 
+ * Print some info about the forbidden rules read.
+
  * Add '--version'
  
  * Add a --verify option that checks whether all files are in place,
