* Althought NEWS and README are encoded in UTF-8,    they are displayed as latin1 by web browsers (CRAN for example),     so encode them in latin1.
git-svn-id: file:///home/manu/work/irace/svn/trunk@955 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/README
+++ b/README
@@ -1,8 +1,8 @@
 irace: An implementation in R of Iterated Race.
 ======================================================================
 
-Manuel L√≥pez-Ib√°√±ez      
-J√©r√©mie Dubois-Lacoste   
+Manuel LÛpez-Ib·Òez      
+JÈrÈmie Dubois-Lacoste   
 Contact email: irace@iridia.ulb.ac.be
 
 
