--- a/NEWS
+++ b/NEWS
@@ -1,12 +1,12 @@
 1.05
 
- * New option --version. (Manuel LÃ³pez-IbÃ¡Ã±ez)
+ * New option --version. (Manuel López-Ibáñez)
 
  * Terminate early if there is no sufficient budget to run irace with
-   the given settings. (Manuel LÃ³pez-IbÃ¡Ã±ez)
+   the given settings. (Manuel López-Ibáñez)
 
  * The option --parallel (without --mpi) now works under Windows.
-   (Manuel LÃ³pez-IbÃ¡Ã±ez, thanks to Pablo Valledor Pellicer for testing
+   (Manuel López-Ibáñez, thanks to Pablo Valledor Pellicer for testing
    it)
 
  * Improved error handling when running under Rmpi. Now irace will
@@ -14,12 +14,12 @@
    slave node. This avoids irace reporting two times the same error.
    Also, irace will print all the unique errors returned by all slaves
    and not just the first one.
-   (Manuel LÃ³pez-IbÃ¡Ã±ez)
+   (Manuel López-Ibáñez)
 
  * Forbidden configurations may be specified in terms of constraints
    on their values. Forbidden configurations will never be evaluated by irace. 
    See --forbidden-file and inst/templates/forbidden.tmpl.
-   (Manuel LÃ³pez-IbÃ¡Ã±ez)
+   (Manuel López-Ibáñez)
 
  * New option --recovery-file (recoveryFile) allows resuming a
    previous irace run. (Leslie Perez)
@@ -28,10 +28,10 @@
    configurable with parameter --confidence. (Leslie Perez)
 
  * Much more robust handling of relative/absolute paths. Improved support
-   for Windows. (Leslie Perez, Manuel LÃ³pez-IbÃ¡Ã±ez)
+   for Windows. (Leslie Perez, Manuel López-Ibáñez)
 
  * Provide better error messages for incorrect parameter
-   descriptions. (Manuel LÃ³pez-IbÃ¡Ã±ez)
+   descriptions. (Manuel López-Ibáñez)
     Examples:
 
     x "" i (0, 0)       # lower and upper bounds are the same
@@ -40,13 +40,13 @@
     x "" c ("a", "a")   # duplicated values
  
  * Print elapsed time for calls to hook-run if debugLevel >=1.
-   (Manuel LÃ³pez-IbÃ¡Ã±ez)
+   (Manuel López-Ibáñez)
 
  * examples/hook-run-python/hook-run: A multi-purpose hook-run written
    in Python. (Franco Mascia)
 
  * Parallel mode in an SGE cluster (--sge-cluster) is more
-   robust. (Manuel LÃ³pez-IbÃ¡Ã±ez)
+   robust. (Manuel López-Ibáñez)
 
 1.04
 
