* NEWS: Mention hookRunParallel and  hookRunData.  * TODO: Our R documentation is quite bad.
git-svn-id: file:///home/manu/work/irace/svn/trunk@959 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,13 @@
+
+ * New configuration options (mainly for R users):
+                    
+   - hookRunParallel: Optional R function to provide custom
+     parallelization of hook.run.
+
+   - hookRunData: Optional data passed to hookRun. This is ignored by
+     the default hookRun function, but it may be used by custom hookRun R
+     functions to pass persistent data around.
+
 1.05
 
  * New option --version. (Manuel López-Ibáñez)
