* Mention fixed bug in NEWS.
git-svn-id: file:///home/manu/work/irace/svn/trunk@973 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,7 @@
+ * Fix bug if there are more initial candidates than needed for the
+   first race. (Leslie Perez, Manuel López-Ibáñez)
 
- * New configuration options (mainly for R users):
+ * New configuration options, mainly for R users:
                     
    - hookRunParallel: Optional R function to provide custom
      parallelization of hook.run.
@@ -7,6 +9,7 @@
    - hookRunData: Optional data passed to hookRun. This is ignored by
      the default hookRun function, but it may be used by custom hookRun R
      functions to pass persistent data around.
+   (Manuel López-Ibáñez)
 
 1.05
 
