--- a/README
+++ b/README
@@ -1,24 +1,72 @@
 irace: An implementation in R of Iterated Race.
-======================================================================
+===============================================
 
-Manuel López-Ibáñez      
-Jérémie Dubois-Lacoste   
+Manuel López-Ibáñez
+Jérémie Dubois-Lacoste
 Contact email: irace@iridia.ulb.ac.be
 
 
 Requisites
--------------
+----------
 
  * R (http://www.r-project.org/) is required for running irace, but
    you don't need to know the R language to use it.
    Versions that work: >= 2.14.0
+   (See Installing R below for a quick install guide)
 
  * If you wish to use the command-line wrappers `irace` and
    `parallel-irace`, they require GNU Bash.
-   
 
-Installation
+
+Installing R
 ------------
+
+The official instructions are available here:
+
+    http://cran.r-project.org/doc/manuals/r-release/R-admin.html
+
+We give below a quick installation guide that will work in most cases.
+
+### GNU/Linux ###
+
+You should install R from your package manager. On a Debian/Ubuntu system it
+will be something like:
+
+    $ sudo apt-get install r-base
+
+Once R is installed, you can launch R from the Terminal and from the R
+prompt install the irace package. See instructions below.
+
+
+### OS X ###
+
+You can install R directly from a CRAN mirror (the link is of the Belgian one):
+
+    http://cran.freestatistics.org/bin/macosx/
+
+Alternatively, if you use homebrew, you can just brew the R formula
+from the science tap (unfortunately it does not come already bottled
+so you need to have Xcode installed to compile it):
+
+    $ brew tap homebrew/science
+    $ brew install r
+
+Once R is installed, you can launch R from the Terminal (or from your
+Applications), and from the R prompt install the irace package. See
+instructions below.
+
+### Windows ###
+
+You can install R form a CRAN mirror (the link is of the Belgian one):
+
+    http://cran.freestatistics.org/bin/windows/
+
+Once R is installed, you can launch the R console and install the
+irace package from it. See instructions below.
+
+
+Installing the irace package
+----------------------------
 
 Install the [irace][1] R package on your computer. There are two
 methods:
@@ -44,7 +92,7 @@ methods:
 
 If the package fails to install because of insufficient permissions,
 you need to force a *local installation* by doing:
-   
+
     $ mkdir ~/R
     $ R CMD INSTALL --library=~/R irace.tar.gz
     $ export R_LIBS=~/R:${R_LIBS}
@@ -56,7 +104,6 @@ Once installed, test that it is working by doing:
     > library(irace)
     > system.file(package="irace")
     [1] "~/R/irace"
-    
 
 The last command tells you the installation directory of `irace`. Save
 that path to a variable, and add it to your `.bash_profile`, `.bashrc`
@@ -66,16 +113,16 @@ or `.profile`:
     export PATH=${IRACE_HOME}/bin/:$PATH
     # export R_LIBS=~/R:${R_LIBS} # Only if local installation was forced
 
+After adding this and opening a new terminal, you should be able to
+invoke `irace` as follows:
 
-After adding this, you should be able to invoke `irace` as follows:
-
-    $ ${IRACE_HOME}/bin/irace --help
+    $ irace --help
 
 
  [1]: http://iridia.ulb.ac.be/irace
  [2]: http://cran.r-project.org/package=irace
-   
- 
+
+
 Usage
 -------
 
@@ -83,32 +130,32 @@ Usage
 
         $ mkdir ~/tuning
         $ cd ~/tuning
-   
+
 2. Copy the template and example files to the tuning directory
 
         $ cp $IRACE_HOME/templates/*.tmpl .
-   
+
    where `$IRACE_HOME` is the path to the installation directory of
    `irace`. It can be obtained by doing:
-   
+
         $ R
         > library(irace)
         > system.file(package="irace")
-   
+
 
 3. For each template in your tuning directory, remove the `.tmpl`
    suffix, and modify them following the instructions in each file. In
    particular,
 
- * `tune-main.tmpl` should be adjusted depending on your usage 
-   (local, cluster, etc).  
+ * `tune-main.tmpl` should be adjusted depending on your usage
+   (local, cluster, etc).
 
  * The scripts `hook-run`, `hook-evaluate` and `tune-main` should be
    executable.
 
  * In `tune-conf`, uncomment and assign only the parameters for which
-   you need a value different than the default one. 
-  
+   you need a value different than the default one.
+
    There are examples in `$IRACE_HOME/examples/`.
 
 4. Put the instances in `~/tuning/Instances/`. In addition, you can
@@ -132,16 +179,16 @@ Many tunings in parallel
 ------------------------
 
 For executing several repetitions of irace in parallel, call the
-program 
+program
 
     $ cd ~/tuning/ && $IRACE_HOME/bin/parallel-irace N
 
 where N is the number of repetitions. By default, the execution
 directory of each run of irace will be set to `./TUNE-dd`, where dd is a
-number padded with zeroes. 
+number padded with zeroes.
 
 **Be careful**, `parallel-irace` will create these directories from
-scratch, deleting them first if they already exist. 
+scratch, deleting them first if they already exist.
 
 Check the help of `parallel-irace` by running it without parameters.
 
@@ -152,16 +199,16 @@ Parallelize one tuning
 A single run of irace can be done much faster by executing the calls
 to `hookRun` (the runs of the algorithm being tuned) in
 parallel. There are three ways to parallelize a single run of irace.
-  
+
 1. Parallel processes: The option `--parallel N` will use the
    `parallel` package to launch *locally* up to N calls of `hookRun` in
    parallel.
-  
+
 2. MPI: The option `--mpi 1 --parallel N` will use the Rmpi package to
    launch N slaves + 1 master, in order to execute N calls of
    `hookRun` in parallel. The user is responsible to set up MPI
-   correctly. 
-   
+   correctly.
+
    An example script for using MPI mode in an SGE cluster is given at
    `$IRACE_HOME/examples/mpi/`.
 
@@ -192,11 +239,11 @@ Definitely. There are two main ways to achieve this:
    way. See the MATLAB documentation, or the following links:
    http://stackoverflow.com/questions/1518072/suppress-start-message-of-matlab/
    http://stackoverflow.com/questions/4611195/how-to-call-matlab-from-command-line-and-print-to-stdout-before-exiting
-   
+
    You would need to pass the parameter received by hook-run to your
    MATLAB script:
    http://www.mathworks.nl/support/solutions/en/data/1-1BS5S/?solution=1-1BS5S
-   
+
 2. Call MATLAB code directly from R using
    [R.matlab package](http://cran.r-project.org/package=R.matlab). This
    is a better option if you are experienced in R. Define hookRun as
@@ -231,7 +278,7 @@ GNU/Linux, it is easy to implement by using the `timeout` command in
 
 Contact
 --------
-   
+
 If you find that you need to modify anything else, something is not
 clear or if you have problems, please contact irace@iridia.ulb.ac.be
 
