--- a/TODO
+++ b/TODO
@@ -21,7 +21,13 @@ TODO R package:
    
    - Document tunerConfig and its variables (some of them are not
      visible in the command-line, but they should be documented here).
-  
+
+ * Fix check-reverse so we can check reverse dependencies before
+   uploading to CRAN.
+
+  (This runs check-reverse, which check every reverse dependency. This
+  may take some time to download all packages and check them.)
+
 
 TODO General:
 
