--- a/README
+++ b/README
@@ -57,7 +57,7 @@ instructions below.
 
 ### Windows ###
 
-You can install R form a CRAN mirror (the link is of the Belgian one):
+You can install R from a CRAN mirror (the link is of the Belgian one):
 
     http://cran.freestatistics.org/bin/windows/
 
