* NEWS: Mention bugfix.
git-svn-id: file:///home/manu/work/irace/svn/trunk@990 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,6 @@
+ * Fix bug that could introduce spurious whitespace when printing the
+   final configurations. (Manuel López-Ibáñez)
+
  * Fix bug if there are more initial candidates than needed for the
    first race. (Leslie Perez, Manuel López-Ibáñez)
 
