* TODO: New item.
git-svn-id: file:///home/manu/work/irace/svn/trunk@1000 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/TODO
+++ b/TODO
@@ -31,6 +31,8 @@ TODO R package:
 
 TODO General:
 
+ * Convert README to README.md (markdown) so CRAN renders it as HTML.
+
  * Print some info about the forbidden rules read.
 
  * Add a --verify option that checks whether all files are in place,
