--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,6 @@
+ * Use requireNamespace instead of require/library to silence CRAN warning.
+   (Manuel López-Ibáñez)
+
 1.06
 
  * Fix bug that could introduce spurious whitespace when printing the
