* TODO: Add yet another item.
git-svn-id: file:///home/manu/work/irace/svn/trunk@1049 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/TODO
+++ b/TODO
@@ -31,6 +31,10 @@ TODO R package:
 
 TODO General:
 
+ * Add an option "deterministic": when the algorithm is deterministic, it does
+   not make sense to test one configuration more than one time on the same
+   instance.
+
  * Convert README to README.md (markdown) so CRAN renders it as HTML.
 
  * Print some info about the forbidden rules read.
